--- a/shard.yml
+++ b/shard.yml
@@ -18,7 +18,7 @@ targets:
 dependencies:
   amber:
     github: amberframework/amber
-    version: 0.10.0
+    version: 0.11.3
     #branch: master
 
   granite:
@@ -49,6 +49,9 @@ dependencies:
     github: drum445/dotenv
 
 development_dependencies:
- garnet_spec:
+  garnet_spec:
    github: amberframework/garnet-spec
    version: ~> 0.2.1
+  ameba:
+    github: veelenga/ameba
+    version: ~> 0.9.0
