--- a/shard.yml
+++ b/shard.yml
@@ -33,9 +33,9 @@ dependencies:
     github: amberframework/jasper-helpers
     version: ~> 0.2.0
 
-  sqlite3:
-    github: crystal-lang/crystal-sqlite3
-    version: ~> 0.10.0
+  pg:
+    github: will/crystal-pg
+    version: ~> 0.15.0
 
   citrine-i18n:
     github: amberframework/citrine-i18n
