--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: jumpcloud_connect
     command: amber watch
     environment:
-      DATABASE_URL: postgres://admin:password@db:5432/lairan_website_development
+      DATABASE_URL: postgres://admin:password@db:5432/project_ci_development
     ports:
       - 3000:3000
     links:
@@ -21,20 +21,11 @@ services:
     image: jumpcloud_connect
     command: bash -c 'amber db migrate seed'
     environment:
-      DATABASE_URL: postgres://admin:password@db:5432/lairan_website_development
+      DATABASE_URL: postgres://admin:password@db:5432/project_ci_development
     volumes:
       - .:/app
     links:
       - db
-
-  danger:
-    image: hosteddanger/hosteddanger
-    environment: 
-      ACCESS_TOKEN: bfc8d6190fa315e4a62506145eda3338bb7a7320
-    ports:
-      - 80:80
-    volumes:
-      - ./config.yaml:/opt/hd/config.yaml
 
   db:
     image: postgres
@@ -44,6 +35,14 @@ services:
       POSTGRES_DB: project_ci_development
     volumes:
       - db:/var/lib/postgresql/data
+
+  mailCatcher:
+    image: schickling/mailcatcher
+    environment: 
+      MAILCATCHER_PORT_1025_TCP_ADDR: 1025
+    ports:
+      - 1025:25
+      - 1080:1080
 
 
 volumes:
